# MoodLens

./: README.md  main.py  package-lock.json
backend/: main.py  pyproject.toml  requirement.txt
backend/app/: api.py  config.py  jwtsign.py  schemas.py  sentiment.py
backend/app/auth0/: auth.py
backend/app/db/: dbconfig.py  mongo.py
frontend/: frontend.py
